# cinemaestro

./: .env.example  .gitignore  README.md  cinemaestro.toml  pyproject.toml
examples/: noir_detective.yaml  simple_short.yaml
examples/configs/: cloud_premium.toml  local_only.toml
projects/explorers/: run_production.py  scene_graph.yaml
projects/lyric_video/: lyric_video.py  lyrics.txt  nes_video.py  scene_graph.yaml
src/cinemaestro/: __init__.py  __main__.py  cli.py  config.py
src/cinemaestro/assembly/: __init__.py  timeline_builder.py  video_editor.py
src/cinemaestro/audio/: __init__.py  base.py  mixer.py
src/cinemaestro/audio/music/: __init__.py  stable_audio.py
src/cinemaestro/audio/sfx/: __init__.py
src/cinemaestro/audio/tts/: elevenlabs.py  xtts.py
src/cinemaestro/characters/: __init__.py
src/cinemaestro/consistency/: __init__.py  base.py  face_analyzer.py  face_swapper.py
src/cinemaestro/core/: __init__.py  character.py  events.py  project.py  scene_graph.py  timeline.py
src/cinemaestro/export/: __init__.py
src/cinemaestro/pipeline/: __init__.py  orchestrator.py  state.py
src/cinemaestro/story/: __init__.py  base.py  llm_writer.py
src/cinemaestro/visual/: __init__.py  base.py  prompt_builder.py
src/cinemaestro/visual/providers/: __init__.py  comfyui.py  fal.py  kling.py  replicate.py  runway.py
src/cinemaestro/visual/strategies/: __init__.py  routing.py
src/cinemaestro/web/: __init__.py
tests/: conftest.py
tests/test_core/: test_character.py  test_config.py  test_project.py  test_scene_graph.py  test_timeline.py
tests/test_pipeline/: test_state.py
tests/test_visual/: test_prompt_builder.py  test_routing.py
